k8s/kube-system/hostdev-device-plugin.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: hostdev-device-plugin
  namespace: kube-system
spec:
  template:
    metadata:
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
      labels:
        name: hostdev-device-plugin-ds
    spec:
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      hostNetwork: true
      containers:
      - name: hostdev
        image: dtp263/k8s-hostdev-plugin
        args: ['--devs', '/dev/kvm:rwm']
        securityContext:
          privileged: true
        volumeMounts:
        - name: device-plugin
          mountPath: /var/lib/kubelet/device-plugins
        - name: dev
          mountPath: /dev
      volumes:
      - name: device-plugin
        hostPath:
          path: /var/lib/kubelet/device-plugins
      - name: dev
        hostPath:
          path: /dev
